# js_to_ts_compiler

./: .gitignore  Cargo.toml  LICENSE  README.md  input.js
src/: lib.rs  main.rs
tests/: cli_tests.rs
